# stochastic_process

./: CMakeLists.txt  LICENSE  README.md
include/: gbm.h  hidden_markov.h  markov.h  sp_math.h
src/: gbm.cpp  hidden_markov.cpp  main.cpp  markov.cpp  sp_math.cpp
tests/: test_gbm.cpp  test_markov.cpp
